--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,6 +4,22 @@
     box-sizing: border-box;
     text-decoration: none;
     scroll-behavior: smooth;
+    list-style: none;
+}
+:root {
+    --color-primary: #191d2b;
+    --color-secondary:  hsl(120,100%,50%); ;
+    --color-white: #FFFFFF;
+    --color-black: #000;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #dbe1e8;
+    --color-grey-2: #b2becd;
+    --color-grey-3: #6c7983;
+    --color-grey-4: #454e56;
+    --color-grey-5: #7b8290;
+    --color-grey-6: #12181b;
+    --br-sm-2: 14px;
+    --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
 header{
     height: 60px;
@@ -22,6 +38,9 @@ header{
     justify-content: center;
     align-items: center;
 }
+.s11 a i {
+color: white;
+}
 .nav1{
     width: 40%;  
     display: flex;
@@ -36,6 +55,9 @@ header{
     font-size: 20px;
     font-weight: bolder;
 }
+#h11{
+    display: none;
+}
 .nav1 a:hover{
     
     color: hsl(120,100%,50%);
@@ -46,6 +68,9 @@ header{
 #x{
     display: none;
     cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 #gun{
     margin-right: 10px;
@@ -112,7 +137,8 @@ section{
     cursor: pointer;
 }
 .s p{
-    font-size: 20px;
+    font-size: 25px;
+    line-height: 35px;
 }
 main{
     height:700px;
@@ -133,6 +159,10 @@ main{
     font-family: 'Dancing Script', cursive;
     margin-top: 30px;
     border: hsl(120,100%,50%) ;
+}
+.timeline-item h5{
+font-weight: bolder;
+color: white;
 }
 main .s .s1{
     padding-left: 30px;
@@ -190,6 +220,7 @@ width:300px;
 height: 200px;
 border-radius: 15px;
 cursor: pointer;
+position: relative;
 }
 .contact{
     height: 100vh;
@@ -224,10 +255,12 @@ cursor: pointer;
         width: 48.5%;
         height: 50px;
         margin-bottom: 20px;
+        padding-left: 20px;
     }
     .input2{
         width: 100%;
         height: 330px;
+        padding-left: 20px;
     }
     input{
         background-color:hsl(228,15%,15%); 
@@ -336,6 +369,14 @@ cursor: pointer;
         font-size: 20px;
     }
 @media screen and (max-width:1024px) {
+    .time{
+        height: fit-content;
+    }
+    .timeline {
+        grid-template-columns: repeat(1, 1fr);
+        max-width: 90%;
+        padding: 20PX;
+      }
     .nav1{
         margin-right: 20px;
         justify-content: end;
@@ -346,13 +387,18 @@ top: 0;
 z-index: 999999999999;
 height: 40px;
     } */
+   
+     #home{
+        margin-top: 60px;
+        height: 600px;
+     }
     #ham{
         display: block;
     }
     #x{
         display: block;
         position: fixed;
-        top: 30px;
+        top: 20px;
         right: 20px;
         color: white;
     }
@@ -370,6 +416,9 @@ height: 40px;
     }
     .moz{
         display: none;
+    }
+    #img{
+        width: 300px;
     }
     #gun{
         display: block;
@@ -395,6 +444,7 @@ height: 40px;
         display: flex;
         justify-content: center;
         align-items: center;
+        border-radius: 15px;
     }
     .s h1{
         font-size: 30px;
@@ -409,18 +459,22 @@ height: 40px;
         font-size: 13px;
     }
     .s2 img{
-        width: 80%;
-        height: 80%;
+        width:50%;
+        height: 70%;
+        background-size: cover;
+        margin-top: 30px;
+        border-radius: 100px;
     }
     main .s{
         flex-direction: column-reverse;
     } 
     main{
-        height: 500px;
+        height: 600px;
     }
     #btn1{
         margin-top: 30px;
         margin-bottom: 30px;
+        min-height: 40px;
     }
     .ar{
         display: flex;
@@ -446,6 +500,7 @@ height: 40px;
     }
     p{
         text-align: center;
+        margin-right: 27px;
     }
     .input1{
         width: 100%;
@@ -486,9 +541,15 @@ height: 40px;
     .span5{
         font-size: 17px;
     }
-    article{
-        max-width: 100vw;
+    #about{
+    height: 800px;
+    padding-top: 30px;
+    text-align: center;
     }
+    #h11{
+        display: none;
+    }
+    
 }
 .cache{
     display: none;
@@ -505,3 +566,202 @@ height: 40px;
 .desactive{
     color: white;
 }
+@media screen and (min-width:1025px) {
+    #ham{
+        display: none;
+    }
+}
+#skills {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    background-color:hsl(228,15%,15%); ;
+  }
+  .title {
+    text-align: center;
+    margin-bottom: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+  .title h2 {
+    font-family: var(--main-font);
+    letter-spacing: 6px;
+    font-weight: 300;
+    color: var(--title-color);
+    font-size: 2rem;
+    color: hsl(120,100%,50%); 
+  }
+  
+  #skills .main {
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+  }
+  
+  #skills .man img {
+    max-width: 300px;
+  }
+  
+  .skills {
+    max-width: 30rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
+    align-self: center;
+  }
+  
+  .skills i {
+    background-color: #37373766;
+    padding: 1rem 1.25rem;
+    border-radius: 50%;
+    font-size: 2.25rem;
+    margin: 1rem 1rem 2rem;
+    color: var(--icon-color);
+    cursor: pointer;
+    position: relative;
+  }
+  .skills i::after {
+    content: attr(data-name);
+    position: absolute;
+    color: white;
+    bottom: 115%;
+    left: 50%;
+    font-size: 1.25rem;
+    text-align: center;
+    font-family: sans-serif;
+    transform: translateX(-50%) scale(0);
+    transform-origin: center bottom;
+    opacity: 0;
+    transition: 0.2s;
+  }
+  .skills i:hover {
+    color: var(--original-color);
+  }
+  .skills i:hover::after {
+    transform: translateX(-50%) scale(1);
+    opacity: 1;
+  }
+  [data-name="React"] {
+    padding: 1rem !important;
+  }
+  [data-name="SCSS"] {
+    padding: 1rem 0.8rem !important;
+  }
+  
+  @media (max-width: 992px) {
+    #skills .main {
+      flex-wrap: wrap;
+    }
+    #skills{
+        height: 1300px;
+    }
+    .s2 img{
+        width: 250px;
+        border-radius: 30px;
+    }
+  }
+  .time{
+    background-color:hsl(228,15%,20%) ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+    justify-content: space-between;
+  }
+.stat-title{
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-family: 'Dancing Script', cursive;
+    font-size: 40px;
+    padding-bottom: 20px;
+}
+  .timeline {
+    height: 80%;
+    max-width:  100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    padding-bottom: 3rem;
+    background-color: hsl(228,15%,20%);
+  }
+  .timeline .timeline-item {
+    position: relative;
+    padding-left: 3rem;
+    border-left: 1px solid var(--color-grey-5);
+    margin-left: 20px;
+  }
+  .timeline .timeline-item .tl-icon {
+    position: absolute;
+    left: -27px;
+    top: 0;
+    background-color: var(--color-secondary);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .timeline .timeline-item .tl-icon i {
+    font-size: 1.3rem;
+    color: whitesmoke;
+  }
+  .timeline .timeline-item .tl-duration {
+    padding: 0.2rem 0.6rem;
+    background-color: white;
+    color: black;
+    font-weight: bolder;
+    border-radius: 15px;
+    display: inline-block;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    width: 120px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  .timeline .timeline-item h5 {
+    padding: 1rem 0;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    font-weight: 600;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  }
+  .timeline .timeline-item h5 span {
+    color: hsl(120,100%,50%);
+    font-weight: 500;
+    font-size: 1.2rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+  .timeline .timeline-item p {
+    color: white;
+  }
+  @media (max-width: 600px) {
+    #skills .main {
+      width: 90%;
+    }
+    #skills{
+        height: 1300px;
+    }
+  }
+  @media screen and (max-width: 700px) {
+    .time{
+        height: fit-content;
+    }
+    .timeline {
+        grid-template-columns: repeat(1, 1fr);
+        max-width: 90%;
+        padding: 20PX;
+      }
+  }
+  
